@@ -5,6 +5,9 @@ Changes from FRESA.CAD 3.4.4 to FRESA.CAD version 3.4.5
 		-ppoisGzero added to the library
 		-CalibrationProbPoissonRisk added to the library
 		-CoxRiskCalibration added to the library
+		-getMedianSurvCalibratedPrediction added to the library
+        -getMedianLogisticCalibratedPrediction added to the library
+
 	Bugs: 
 		-randomCV error with SVM fit corrected
 		-try-chatch added to filteredFit.
